Fix overflow issue

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -24,6 +24,10 @@ pf-v6-c-page__main-container.pf-m-fill {
   height: 100%;
   width: 100%;
 
+  @media screen and (max-width: 900px) {
+    overflow-y: auto;
+  }
+
   .compare-item:first-of-type {
     border-right: 1px solid var(--pf-t--global--border--color--default);
 
@@ -38,9 +42,6 @@ pf-v6-c-page__main-container.pf-m-fill {
     .pf-chatbot__content {
       padding: 0;
     }
-    .pf-chatbot__footer {
-      padding: var(--pf-t--global--spacer--sm) 0;
-    }
   }
 }
 
@@ -48,9 +49,14 @@ pf-v6-c-page__main-container.pf-m-fill {
   padding: var(--pf-t--global--spacer--md) var(--pf-t--global--spacer--lg) 0 var(--pf-t--global--spacer--lg);
   display: none;
   background-color: var(--pf-t--global--background--color--secondary--default);
+  position: sticky;
+  top: 0;
+  z-index: 9999; /*fixme*/
 
   @media screen and (max-width: 900px) {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    gap: var(--pf-t--global--spacer--md);
   }
 }
 
@@ -72,7 +78,13 @@ pf-v6-c-page__main-container.pf-m-fill {
 .compare-container {
   display: flex;
   flex-direction: column;
+  position: relative;
   height: 100%;
+
+  .pf-chatbot__footer {
+    position: sticky;
+    bottom: 0;
+  }
 }
 
 .compare-toggle {
@@ -86,6 +98,9 @@ pf-v6-c-page__main-container.pf-m-fill {
 }
 
 .chatbot-ui-page {
+  .pf-v6-c-page__main {
+    overflow: hidden;
+  }
   @media screen and (max-width: 900px) {
     --pf-v6-c-page__main-container--MaxHeight: 100%;
   }
